# OrganizationalStructure

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c4e94231c87e_create_departments_and_employees.py
app/: main.py
app/api/: contracts.py  error_handlers.py  router.py
app/api/v1/: departments.py
app/core/: config.py  errors.py
app/db/: session.py
app/models/: department.py  employee.py
app/schemas/: __init__.py  department.py  employee.py
app/services/: __init__.py  departments.py  employees.py
app/services/departments/: __init__.py  common.py  tree.py  write.py
scripts/: start.sh
tests/: conftest.py  test_db_infrastructure.py  test_departments_api.py  test_error_contracts.py  test_schemas_validation.py  test_services_create.py  test_services_delete.py  test_services_layer.py  test_services_tree.py  test_services_update.py
